# simul-testing

./: .gitignore  CMakeLists.txt  README.md
linalg/: LinSys.cpp  LinSys.hpp  Matrix.cpp  Matrix.hpp  Vector.cpp  Vector.hpp
test/: CMakeLists.txt  LinearSystemTests.cpp
